@@ -1,3 +1,11 @@
+2022-11-18T16:08:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3498422524 # 625
+* notice: last 14d: unq all: 5 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 33 71 / 37 75
+* notice: next accum: outdated-unq outdated-all / unq all: 33 71 / 38 76
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-18]
+
 2022-11-17T16:08:31Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3489955874 # 622
 * notice: last 14d: unq all: 4 4
